profilelist1exp/unpackaged/objects/Install_Base__c.object
<CustomObject>
    <fields>
        <fullName>DB_Server__c</fullName>
        <label>DB Server</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DB_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bull</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>inspur</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>Oracle/Sun</fullName>
                </value>
                <value>
                    <fullName>Quantum</fullName>
                </value>
                <value>
                    <fullName>SuperMicro</fullName>
                </value>
                <value>
                    <fullName>White Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Storage_Qty__c</fullName>
        <label>DB Storage Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Storage__c</fullName>
        <label>DB Storage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DB_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CEPH</fullName>
                </value>
                <value>
                    <fullName>Compellent</fullName>
                </value>
                <value>
                    <fullName>Datacore</fullName>
                </value>
                <value>
                    <fullName>Dell EMC Other</fullName>
                </value>
                <value>
                    <fullName>EMC (SAN)</fullName>
                    <isActive>false</isActive>
                    <label>EMC (SAN)</label>
                </value>
                <value>
                    <fullName>EqualLogic</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Infinidat</fullName>
                </value>
                <value>
                    <fullName>Isilon</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>Nexenta</fullName>
                </value>
                <value>
                    <fullName>Nimble</fullName>
                </value>
                <value>
                    <fullName>Nutanix- Dell</fullName>
                </value>
                <value>
                    <fullName>Nutanix- Other</fullName>
                </value>
                <value>
                    <fullName>PowerMax/VMax</fullName>
                </value>
                <value>
                    <fullName>PowerVault</fullName>
                </value>
                <value>
                    <fullName>PureStorage</fullName>
                </value>
                <value>
                    <fullName>S2D</fullName>
                </value>
                <value>
                    <fullName>ScaleIO</fullName>
                </value>
                <value>
                    <fullName>Unity</fullName>
                </value>
                <value>
                    <fullName>VSAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Virtual_Platform__c</fullName>
        <label>DB Virtual Platform</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DB_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Citrix Xenserver</fullName>
                </value>
                <value>
                    <fullName>Dell EMC EHC</fullName>
                </value>
                <value>
                    <fullName>Dell EMC HCI</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>HPE Simplivity</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>KVM</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>Microsft CPS / Azure PAC</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure Stack</fullName>
                </value>
                <value>
                    <fullName>MS Hyper-V</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Nutanix is HCI (not SDS)</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>OS Native</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>Other OpenStack</fullName>
                </value>
                <value>
                    <fullName>RedHat OpenStack</fullName>
                </value>
                <value>
                    <fullName>SUSE Openstack</fullName>
                </value>
                <value>
                    <fullName>UCS</fullName>
                </value>
                <value>
                    <fullName>VCE</fullName>
                </value>
                <value>
                    <fullName>Virtustream</fullName>
                </value>
                <value>
                    <fullName>VMware  ESX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database_Platform__c</fullName>
        <label>Database Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cassandra</fullName>
                </value>
                <value>
                    <fullName>DB2/UDB</fullName>
                </value>
                <value>
                    <fullName>NOSQL</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>Sybase</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <label>Database</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Workload__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amazon S3</fullName>
                </value>
                <value>
                    <fullName>Apache</fullName>
                    <isActive>false</isActive>
                    <label>Apache</label>
                </value>
                <value>
                    <fullName>CacheDB</fullName>
                </value>
                <value>
                    <fullName>Cassandra</fullName>
                </value>
                <value>
                    <fullName>Cloudera</fullName>
                    <isActive>false</isActive>
                    <label>Cloudera</label>
                </value>
                <value>
                    <fullName>Hadoop - Apache</fullName>
                </value>
                <value>
                    <fullName>Hadoop - Cloudera</fullName>
                </value>
                <value>
                    <fullName>Hadoop - HortonWorks</fullName>
                </value>
                <value>
                    <fullName>Hadoop - MapR</fullName>
                </value>
                <value>
                    <fullName>HortonWorks</fullName>
                    <isActive>false</isActive>
                    <label>HortonWorks</label>
                </value>
                <value>
                    <fullName>IBM DB2</fullName>
                </value>
                <value>
                    <fullName>MapR</fullName>
                    <isActive>false</isActive>
                    <label>MapR</label>
                </value>
                <value>
                    <fullName>Max DB</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL</fullName>
                </value>
                <value>
                    <fullName>MongoDB</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
                <value>
                    <fullName>Opensource</fullName>
                </value>
                <value>
                    <fullName>Oracle Exadata</fullName>
                </value>
                <value>
                    <fullName>Oracle Exalytics</fullName>
                </value>
                <value>
                    <fullName>Oracle RAC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SAP ASE</fullName>
                </value>
                <value>
                    <fullName>SAP HANA</fullName>
                </value>
                <value>
                    <fullName>SAP IQ</fullName>
                </value>
                <value>
                    <fullName>Splunk</fullName>
                </value>
                <value>
                    <fullName>Teradata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Contract_Ends__c</fullName>
        <label>Date Contract Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dell_Penetration__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <formula>IF ( Total_Quantity__c &lt;&gt;0,  Total_Dell_Quantity__c  / Total_Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Penetration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Desktop_Qty__c</fullName>
        <label>Desktop Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desktop__c</fullName>
        <label>Desktop</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Workload_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Fujitsu Siemens</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
                <value>
                    <fullName>HPQ</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Panasonic</fullName>
                </value>
                <value>
                    <fullName>Sony</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>WhiteBox (Integrator)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Directories__c</fullName>
        <label>Directories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Directories</fullName>
                </value>
                <value>
                    <fullName>Novell eDirectory</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
                <value>
                    <fullName>Tivoli</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Platform__c</fullName>
        <label>Email Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>GroupWise</fullName>
                </value>
                <value>
                    <fullName>IMAP</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
                <value>
                    <fullName>Office 365</fullName>
                </value>
                <value>
                    <fullName>Zimbra</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fourth_Incumbent__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Fourth Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>3i-Infotech</fullName>
                </value>
                <value>
                    <fullName>3 Par</fullName>
                </value>
                <value>
                    <fullName>Acando</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Acronis</fullName>
                </value>
                <value>
                    <fullName>Acxiom</fullName>
                </value>
                <value>
                    <fullName>Aditro</fullName>
                </value>
                <value>
                    <fullName>Affiliated Computer Services (ACS)</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Alldata</fullName>
                </value>
                <value>
                    <fullName>Almaviva Group</fullName>
                </value>
                <value>
                    <fullName>Aloha</fullName>
                </value>
                <value>
                    <fullName>Alphawest</fullName>
                </value>
                <value>
                    <fullName>Altiris</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Amcon Solution Group (ASG)</fullName>
                </value>
                <value>
                    <fullName>Amdocs</fullName>
                </value>
                <value>
                    <fullName>Analysts International</fullName>
                </value>
                <value>
                    <fullName>Anite</fullName>
                </value>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>AppAssure</fullName>
                </value>
                <value>
                    <fullName>AppDynamics</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>ASUS</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fourth_Quantity__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Fourth Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Initiatives_and_Priorities__c</fullName>
        <label>IT Initiatives and Priorities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Organization_Name__c</fullName>
        <label>IT Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client Service</fullName>
                </value>
                <value>
                    <fullName>Database Management</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>Dell Services</fullName>
                </value>
                <value>
                    <fullName>Desktops</fullName>
                </value>
                <value>
                    <fullName>End Point Protection</fullName>
                </value>
                <value>
                    <fullName>Firewalls</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Consulting Service</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Microsoft Agreement</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Peripherals</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>SAN</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Systems Management</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Virtualization</fullName>
                </value>
                <value>
                    <fullName>Workload</fullName>
                </value>
                <value>
                    <fullName>Workstation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_hyperlink__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  Hyper Link||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , LOB_text__c , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_text__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  Hyper Link||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <formula>CASE ( LOB__c , 
&quot;Imaging&quot;,&quot;Imaging&quot;, 
&quot;Networking&quot;,&quot;Networking&quot;, 
&quot;Notebook&quot;,&quot;Notebook&quot;, 
&quot;Server&quot;,&quot;Server&quot;, 
&quot;Client Service&quot;,&quot;Client Service&quot;, 
&quot;Software&quot;,&quot;Software&quot;, 
&quot;Storage&quot;,&quot;Storage&quot;, 
&quot;Workstation&quot;,&quot;Workstation&quot;, 
&quot;Desktops&quot;,&quot;Desktops&quot;, 
&quot;Infrastructure Consulting Service&quot;,&quot;Infrastructure Consulting Service&quot;, 
&quot;Monitor&quot;,&quot;Monitor&quot;, 
&quot;Leasing&quot;,&quot;Leasing&quot;, 
&quot;POS&quot;,&quot;POS&quot;, 
&quot;Peripherals&quot;,&quot;Peripherals&quot;, 
&quot;Dell Services&quot;,&quot;Dell Services&quot;, 
&quot;SAN&quot;, &quot;SAN&quot;, 
&quot;Virtualization&quot;, &quot;Virtualization&quot;, 
&quot;Data Protection&quot;, &quot;Data Protection&quot;, 
&quot;Firewalls&quot;, &quot;Firewalls&quot;, 
&quot;End Point Protection&quot;, &quot;End Point Protection&quot;, 
&quot;Systems Management&quot;, &quot;Systems Management&quot;, 
&quot;Database Management&quot;, &quot;Database Management&quot;, 
&quot;Network Management&quot;, &quot;Network Management&quot;, 
&quot;Microsoft Agreement&quot;, &quot;Microsoft Agreement&quot;,
&quot;Tablet&quot;, &quot;Tablet&quot;,
&quot;Workload&quot;, &quot;Workload&quot;,
&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middleware__c</fullName>
        <label>Middleware</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>IBM MQ</fullName>
                </value>
                <value>
                    <fullName>MS MQ</fullName>
                </value>
                <value>
                    <fullName>Open Source</fullName>
                </value>
                <value>
                    <fullName>Tibco</fullName>
                </value>
                <value>
                    <fullName>Weblogic</fullName>
                </value>
                <value>
                    <fullName>Websphere</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notebook_Qty__c</fullName>
        <label>Notebook Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notebook__c</fullName>
        <label>Notebook</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Workload_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>ASUS</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Fujitsu Siemens</fullName>
                </value>
                <value>
                    <fullName>HPQ</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Panasonic</fullName>
                </value>
                <value>
                    <fullName>Sony</fullName>
                </value>
                <value>
                    <fullName>Toshiba</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>WhiteBox (Integrator)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operating_System_Platform__c</fullName>
        <label>Operating System Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>AS400</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>HPUX</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
                <value>
                    <fullName>Mainframe</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunities_To_Compete__c</fullName>
        <label>Opportunities To Compete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_CMDB__c</fullName>
        <label>Other CMDB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Cloud_Platform__c</fullName>
        <label>Other Cloud Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Collaboration_Platform__c</fullName>
        <label>Other Collaboration Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Custom_Apps_Development_Platform__c</fullName>
        <label>Other Custom Apps Development Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Database_Platform__c</fullName>
        <label>Other Database Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Directories__c</fullName>
        <label>Other Directories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Email_Platform__c</fullName>
        <label>Other Email Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Middleware__c</fullName>
        <label>Other Middleware</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Operating_System_Platform__c</fullName>
        <label>Other Operating System Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Packed_Apps__c</fullName>
        <label>Other Packed Apps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Performance_Monitors__c</fullName>
        <label>Other Performance Monitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Security__c</fullName>
        <label>Other Security</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Services_Desk_Technologies__c</fullName>
        <label>Other Services Desk Technologies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Packed_Apps__c</fullName>
        <label>Packed Apps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IBM Tivoli</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamic CRM</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamic ERP</fullName>
                </value>
                <value>
                    <fullName>Oracle E-Business Suite</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>